--- a/app/src/main/res/layout/view_card.xml
+++ b/app/src/main/res/layout/view_card.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
     <LinearLayout
-        android:id="@+id/teamCardId"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:gravity="center"
+    android:background="@drawable/rounded_bg"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
         <TextView
             android:id="@+id/card_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="32sp"
+            android:textSize="@dimen/caption_text_size"
+            android:textColor="@color/black_text"
             android:gravity="center"
             />
-
     </LinearLayout>
-</layout>
