--- a/app/src/main/res/layout/fragment_list_of_teams.xml
+++ b/app/src/main/res/layout/fragment_list_of_teams.xml
@@ -15,7 +15,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addTeamId" />
+            app:layout_constraintTop_toBottomOf="@+id/addTeamId"
+            tools:listitem="@layout/fragment_team_item"/>
 
         <Button
             android:id="@+id/addTeamId"
