--- a/app/src/main/res/layout/fragment_task_create.xml
+++ b/app/src/main/res/layout/fragment_task_create.xml
@@ -88,13 +88,13 @@
             <Button
                 android:id="@+id/task_create_button_id"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="32dp"
                 android:textColor="@android:color/white"
                 android:onClick="@{() -> home.createTask()}"
-                android:text="@string/create_task"
+                android:text="@string/add_task"
                 android:textAllCaps="false"
                 android:background="@drawable/rounded_corner_blue"
                 app:layout_constraintBottom_toBottomOf="parent"
