--- a/app/src/main/res/layout/fragment_task_details.xml
+++ b/app/src/main/res/layout/fragment_task_details.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -11,13 +10,12 @@
             android:id="@+id/task_details_title_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="28dp"
             android:text="@string/task_title"
             android:textColor="@android:color/black"
-            android:textStyle="bold"
             android:textSize="22sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.467"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,45 +27,52 @@
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.197"
+            app:layout_constraintHorizontal_bias="0.048"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/task_details_title_id"
             tools:text="John Doe" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/task_details_description_id"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            tools:text="Content"
             app:layout_constraintBottom_toTopOf="@+id/task_details_close_id"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.467"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/task_details_assigned_id" />
+            app:layout_constraintTop_toBottomOf="@+id/task_details_assigned_id"
+            tools:text="Content" />
 
         <Button
             android:id="@+id/task_details_close_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
-            tools:text="Close"
+            android:text="@string/edit_task"
+            android:textColor="@android:color/white"
+            android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.529"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/rounded_corner_blue" />
 
         <TextView
             android:id="@+id/task_details_status_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            tools:text="Status"
             app:layout_constraintBottom_toBottomOf="@+id/task_details_assigned_id"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/task_details_title_id"
-            app:layout_constraintVertical_bias="0.74" />
+            app:layout_constraintTop_toTopOf="@+id/task_details_assigned_id"
+            app:layout_constraintVertical_bias="0.74"
+            tools:text="Status" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
