--- a/app/src/main/res/layout/fragment_all_members_list.xml
+++ b/app/src/main/res/layout/fragment_all_members_list.xml
@@ -19,15 +19,19 @@
 
         <Button
             android:id="@+id/addDevId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:text="+"
-            android:textSize="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:text="@string/add_new_team"
+            android:textColor="@android:color/white"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
+            app:layout_constraintHorizontal_bias="0.529"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/rounded_corner_blue"  />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
