--- a/app/src/main/res/layout/single_member_item.xml
+++ b/app/src/main/res/layout/single_member_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <variable name="teams" type="com.example.jiraclone.models.Team" />
+        <variable name="teamMember" type="com.example.jiraclone.models.TeamMember" />
     </data>
 
     <com.example.jiraclone.ui.views.CustomCardView
@@ -20,5 +20,5 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        app:textInput="@{teams.component2()}"/>
+        app:textInput="@{teamMember.component1()}"/>
 </layout>
