--- a/app/src/main/res/layout/fragment_task_create.xml
+++ b/app/src/main/res/layout/fragment_task_create.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -19,12 +20,12 @@
                 android:id="@+id/task_create_page_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="28dp"
                 android:text="@string/create_task"
+                android:textColor="@android:color/black"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:layout_gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -33,25 +34,26 @@
                 android:id="@+id/task_create_title_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/task_title"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.101"
+                app:layout_constraintHorizontal_bias="0.047"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/task_create_page_id" />
+                app:layout_constraintTop_toBottomOf="@+id/spinner_members" />
 
             <EditText
                 android:id="@+id/task_create_title_name_id"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/rounded_corner"
                 android:inputType="text|textNoSuggestions"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_create_title_id" />
 
@@ -60,7 +62,7 @@
                 android:id="@+id/task_create_content_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="28dp"
                 android:text="@string/content"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -72,18 +74,20 @@
             <EditText
                 android:id="@+id/task_create_description_id"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="277dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="32dp"
-                android:gravity="top"
                 android:background="@drawable/rounded_corner"
+                android:gravity="top"
                 android:inputType="text|textNoSuggestions"
                 app:layout_constraintBottom_toTopOf="@+id/task_create_button_id"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/task_create_content_id" />
+                app:layout_constraintTop_toBottomOf="@+id/task_create_content_id"
+                app:layout_constraintVertical_bias="0.868" />
 
             <Button
                 android:id="@+id/task_create_button_id"
@@ -100,6 +104,29 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
+            <Spinner
+                android:id="@+id/spinner_teams"
+                android:layout_width="219dp"
+                android:layout_height="22dp"
+                android:layout_marginTop="20dp"
+                app:entries="@{home.teamsList}"
+                app:newValue="@{home.observeCurrentTeamEvent()}"
+                app:onItemSelected="@{}"
+                app:layout_constraintEnd_toEndOf="@+id/task_create_title_name_id"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/task_create_title_name_id"
+                app:layout_constraintTop_toBottomOf="@+id/task_create_page_id" />
+
+            <Spinner
+                android:id="@+id/spinner_members"
+                android:layout_width="219dp"
+                android:layout_height="22dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintEnd_toEndOf="@+id/task_create_title_name_id"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/task_create_title_name_id"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_teams" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
