Add Logic in Update Task screen

--- a/app/src/main/res/layout/fragment_task_create.xml
+++ b/app/src/main/res/layout/fragment_task_create.xml
@@ -21,12 +21,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="32dp"
                 android:text="@string/create_task"
-                android:textColor="@android:color/black"
+                android:textColor="#00344d"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.054"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,10 +35,10 @@
                 android:id="@+id/task_create_title_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="30dp"
                 android:text="@string/task_title"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.047"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,10 +47,14 @@
             <EditText
                 android:id="@+id/task_create_title_name_id"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                android:maxLines="1"
+                android:textSize="16sp"
+                android:maxLength="35"
+                android:fontFamily="sans-serif-light"
                 android:background="@drawable/rounded_corner"
                 android:inputType="text|textNoSuggestions"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +70,7 @@
                 android:layout_marginTop="28dp"
                 android:text="@string/content"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/task_create_title_id"
@@ -81,7 +86,9 @@
                 android:layout_marginBottom="32dp"
                 android:background="@drawable/rounded_corner"
                 android:gravity="top"
-                android:inputType="text|textNoSuggestions"
+                android:textSize="14sp"
+                android:fontFamily="sans-serif-light"
+                android:inputType="text|textNoSuggestions|textMultiLine"
                 app:layout_constraintBottom_toTopOf="@+id/task_create_button_id"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -109,10 +116,7 @@
                 android:id="@+id/spinner_teams"
                 android:layout_width="219dp"
                 android:layout_height="22dp"
-                android:layout_marginTop="20dp"
-                app:entries="@{home.teamsList}"
-                app:newValue="@{home.observeCurrentTeamEvent()}"
-                app:onItemSelected="@{}"
+                android:layout_marginTop="32dp"
                 app:layout_constraintEnd_toEndOf="@+id/task_create_title_name_id"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/task_create_title_name_id"
